@@ -287,8 +287,9 @@ namespace Rcpp{
 		mangled_name += cl->name ;
 		slot( ".Data" ) = mangled_name ;
 		
-		slot( "fields" ) = cl->fields( clxp.asSexp() ) ;
-		slot( "methods" ) = cl->getMethods( clxp.asSexp() ) ;
+		slot( "fields" )      = cl->fields( clxp.asSexp() ) ;
+		slot( "methods" )     = cl->getMethods( clxp.asSexp() ) ;
+		slot( "constructors") = cl->getConstructors( clxp.asSexp() ) ;
 	}
 
 	CppObject::CppObject( Module* p, class_Base* clazz, SEXP xp ) : S4("C++Object") {
